SSCSSI-437: merge sscs-pdf-email-common into sscs-tribunals-case-api